--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -36,6 +36,13 @@
             height: 350px;
             position: relative;
         }
+        .card-body{
+            text-align: center;
+            font-size: 25px;
+        }
+        .card{
+            font-size: 20px;
+        }
     </style>
 </head>
 <body>
@@ -126,7 +133,7 @@
             <div class="card-header bg-dark text-white fw-bold">
                 📜 Detailed Course Performance
             </div>
-            <div class="card-body">
+            <div class="table">
                 <div class="table-responsive">
                     <table class="table table-striped table-hover align-middle">
                         <thead>
