--- a/templates/reports.html
+++ b/templates/reports.html
@@ -22,7 +22,7 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item"><a class="nav-link active" aria-current="page" href="/dashboard">🏠 Dashboard</a></li>
-                    <li class="nav-item"><a class="nav-link" href="/student-profile">👩‍🎓 Student Profile</a></li>
+                    <li class="nav-item"><a class="nav-link" href="/student-profile">👩‍🎓 Student Management</a></li>
                     <li class="nav-item"><a class="nav-link" href="/subject-analysis">📘 Subject Analysis</a></li>
                     <li class="nav-item"><a class="nav-link" href="/comparison">📈 Comparison</a></li>
                     <li class="nav-item"><a class="nav-link" href="/prediction">🧮 Prediction</a></li>
