--- a/templates/dashboard-1.html
+++ b/templates/dashboard-1.html
@@ -45,7 +45,7 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item"><a class="nav-link active" aria-current="page" href="index.html">🏠 Dashboard</a></li>
-                    <li class="nav-item"><a class="nav-link" href="student-profile.html">👩‍🎓 Student Profile</a></li>
+                    <li class="nav-item"><a class="nav-link" href="student-profile.html">👩‍🎓 Student Management</a></li>
                     <li class="nav-item"><a class="nav-link" href="subject-analysis.html">📘 Subject Analysis</a></li>
                     <li class="nav-item"><a class="nav-link" href="comparison.html">📈 Comparison</a></li>
                     <li class="nav-item"><a class="nav-link" href="prediction.html">🧮 Prediction</a></li>
